--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -16,7 +16,7 @@
       <div class="content">
         <%= render 'layouts/admin/navbar/navbar' %>
         <%= render 'components/alerts/alert' %>
-        <div class="mx-3">
+        <div class="m-3">
           <%= yield %>
         </div>
       </div>
