report problem form

--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -468,7 +468,9 @@
 }
 
 #tabs.header-item .menu_item.current.has_nested .menu .menu_item a {
-  line-height: 18px;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  line-height: 22px;
 }
 
 .form-actions {
