--- a/app/views/layouts/admin/links/_form_link.html.erb
+++ b/app/views/layouts/admin/links/_form_link.html.erb
@@ -17,7 +17,10 @@
     data-parent='#accordion'
   >
     <a href="/membership_withdrawals" class='d-block pl-2 pb-3'>
-      Withdrawal Form
+      Withdrawal
+    </a>
+    <a href="/problem_forms" class='d-block pl-2 pb-3'>
+      Report Problem
     </a>
   </div>
 </div>
