--- a/app/views/membership_withdrawals/show.html.erb
+++ b/app/views/membership_withdrawals/show.html.erb
@@ -2,6 +2,7 @@
   <br/>
   <p>
     I <%= current_user.name %>, member of LDTC would like to withdraw my membership. This is due to the following reasons: <%= @membership_withdrawal.content %>.
+    In relation to my request, I am expecting for the refund of my capital share and other interest corresponding to my withdrawal.
   </p>
   <p>
     <strong>Admin note:</strong>
