Finalize additional requirements

--- a/app/views/layouts/admin/links/_form_link.html.erb
+++ b/app/views/layouts/admin/links/_form_link.html.erb
@@ -22,5 +22,11 @@
     <a href="/problem_forms" class='d-block pl-2 pb-3'>
       Report Problem
     </a>
+    <a href="/share_capitals" class='d-block pl-2 pb-3'>
+      Share Capital
+    </a>
+    <a href="/share_capital_withdrawals" class='d-block pl-2 pb-3'>
+      Share Capital Withdrawal
+    </a>
   </div>
 </div>
