--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -107,7 +107,7 @@ a {
     overflow: auto;
     // background-color: #272727;
 
-    background-image: url("/images/bg.png");
+    // background-image: url("/images/bg.png");
     label {
       color: rgb(179, 179, 179);
     }
@@ -407,7 +407,6 @@ pre.console-prompt-display {
 }
 
 .login-page {
-  background-image: url("/images/bg-3.png");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
@@ -434,7 +433,7 @@ pre.console-prompt-display {
 
 html,
 .main-body {
-  background-image: url("/images/bg-3.png");
+  // background-image: url("/images/bg-3.png");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
