--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,17 +1,10 @@
 <div class="login-page">
   <div class="registration-container container bg-white p-5 shadow my-5">
-    <h2 class="text-center">Membership Application form</h2>
-    <p class="text-center my-0">LINGAYEN DAGUPAN TRANSPORT COOPERATIVE</p>
-    <p class="text-center my-0">Brgy. Quibaol West, Highway, Lingayen Pangasinan</p>
-    <p class="text-center my-0">CDA Registration No. 9520-1010000000045365</p>
-    <p class="text-center my-0">TIN N0. 737-879-958-000</p>
+    <h2 class="text-center">Register</h2>
     <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= f.error_notification %>
       <div class="form-inputs">
         <%= f.input :image,
-                  autofocus: true,
-                  required: true %>
-        <%= f.input :id_image,
                   autofocus: true,
                   required: true %>
         <%= f.input :first_name,
@@ -21,22 +14,6 @@
                   autofocus: true,
                   required: true %>
         <%= f.input :middle_name,
-                  autofocus: true,
-                  required: true %>
-        <%= f.input :tin,
-                   label: "TIN",
-                  autofocus: true,
-                  required: true %>
-        <%= f.input :sss,
-                   label: "SSS",
-                  autofocus: true,
-                  required: true %>
-        <%= f.input :philhealth,
-                   label: "PHILHEALTH:",
-                  autofocus: true,
-                  required: true %>
-        <%= f.input :pag_ibig,
-                   label: "PAG-IBIG:",
                   autofocus: true,
                   required: true %>
         <%= f.input :birthday, html5: true,
