--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Lingayen Dagupan Transport Cooperative</title>
+    <title>Hotel Reservation</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <!-- <link rel="icon" href="/images/logo.png"> -->
