--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,15 +1,2 @@
-<div class="container bg-white py-3 px-5  shadow mt-5 rounded">
-  <br>
-  <% if current_user.verified_at.present? %>
-    <h3 class="text-dark">Welcome</h3>
-    <hr>
-    <p>Your account is now verified.</p>
-  <% else %>
-    <h3 class="text-dark">You're not yet verified. Your account is currently in review.</h3>
-    <hr>
-    <p>This will take up to 3-7 working days for the administrator to verify your account. We will contact you immediately after verification.</p>
-  <% end %>
-  <div><img style="width: 70%; display: block; margin: 50px auto" src="/images/mission.png"></div>
-  <div><img style="width: 70%; display: block; margin: 50px auto" src="/images/vision.png"></div>
-  <div><img style="width: 70%; display: block; margin: 50px auto" src="/images/core-values.png"></div>
-</div>
+<h1 class="text-center mt-5">Project summary here</h1>
+<p class="text-center">Waiting for design</p>
