--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,50 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <body class="main-body">
-    <%= yield %>
+    <div class="container bg-white rounded shadow px-0" style="min-height: 100vh">
+      <% if current_user.present? %>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-green ">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item active">
+                <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/hotels">Hotels</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/about">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/contact_us">Contact us</a>
+              </li>
+            </ul>
+            <form class="form-inline mx-md-5" style="flex: 1" action="/hotels">
+              <input name="search" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="/orders">Orders</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/profile"><%= current_user.name %></a>
+              </li>
+              <li class="nav-item">
+                <%= link_to(destroy_user_session_path, method: :delete, class: 'nav-link', data: { confirm: 'Are you sure?' } ) do %>
+                  <i class="fas fa-sign-out-alt mr-1 icon"></i>
+                  Signout
+                <% end %>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      <% end %>
+      <%= yield %>
+    </div>
   </body>
   <%# if Rails.env.development? %>
   <%# console %>
