--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
             </form>
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="/orders">Orders</a>
+                <a class="nav-link" href="/orders">Transactions</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/profile"><%= current_user.name %></a>
@@ -51,6 +51,11 @@
             </ul>
           </div>
         </nav>
+      <% end %>
+      <% if notice.present? %>
+        <div class="alert alert-success" role="alert">
+          <%= notice %>
+        </div>
       <% end %>
       <%= yield %>
     </div>
