--- a/app/views/home/contact_us.html.erb
+++ b/app/views/home/contact_us.html.erb
@@ -1,2 +1,3 @@
-<h1 class="text-center mt-5">Contact us here</h1>
-<p class="text-center">Waiting for design</p>
+<div class="static-container">
+  <img src="/images/about.png" alt="" class="w-100">
+</div>
