--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,3 @@
-<h1 class="text-center mt-5">Project summary here</h1>
-<p class="text-center">Waiting for design</p>
+<div class="static-container">
+  <img src="/images/home2.png" alt="" class="w-100">
+</div>
