--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,16 +18,16 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-              <li class="nav-item active">
+              <li class="nav-item <%= action_name == "index" ? "active" : ""%>">
                 <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item <%= action_name == "hotels" ? "active" : ""%>">
                 <a class="nav-link" href="/hotels">Hotels</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item <%= action_name == "about" ? "active" : ""%>">
                 <a class="nav-link" href="/about">About</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item <%= action_name == "contact_us" ? "active" : ""%>">
                 <a class="nav-link" href="/contact_us">Contact us</a>
               </li>
             </ul>
